fixed swagger & ruotes
